JumpScript/tests/baselines/reference/unusedVariablesinBlocks1.errors.txt
tests/cases/compiler/unusedVariablesinBlocks1.jump(2,9): error TS6133: 'x' is declared but its value is never read.
tests/cases/compiler/unusedVariablesinBlocks1.jump(4,13): error TS6133: 'x' is declared but its value is never read.


==== tests/cases/compiler/unusedVariablesinBlocks1.jump (2 errors) ====
    function f1 () {
        let x = 10;
            ~
!!! error TS6133: 'x' is declared but its value is never read.
        {
            let x = 11;
                ~
!!! error TS6133: 'x' is declared but its value is never read.
            x++;
        }
    }